@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.12
 Date: 2020.07.XX
+  Features:
+    - Added function "clear_icon_specification"
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.11
 Date: 2020.07.15
